--- a/home3.html
+++ b/home3.html
@@ -39,37 +39,37 @@
 	<!-- links -->
 	<ul>
 		<li class="cat">&#9002; Reddit</li>
-		<li><a class="link" href="https://www.reddit.com/">reddit * </a></li>
-		<li><a class="link" href="https://www.reddit.com/r/unixporn">/r/unixporn * </a></li>
-		<li><a class="link" href="https://www.reddit.com/r/math">/r/math * </a></li>
-		<li><a class="link" href="https://www.reddit.com/r/technology">/r/technology * </a></li>
-		<li><a class="link" href="https://www.reddit.com/r/space">/r/space * </a></li>
+		<li><a class="link" href="https://www.reddit.com/">reddit</a> * </li>
+		<li><a class="link" href="https://www.reddit.com/r/unixporn">/r/unixporn</a> * </li>
+		<li><a class="link" href="https://www.reddit.com/r/math">/r/math</a> * </li>
+		<li><a class="link" href="https://www.reddit.com/r/technology">/r/technology</a> * </li>
+		<li><a class="link" href="https://www.reddit.com/r/space">/r/space</a></li>
 	</ul>
 	<br>
 	<ul>
 		<li class="cat">&#9002; 4chan</li>
-		<li><a class="link" href="http://boards.4chan.org/g/">technology * </a></li>
-		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan * </li>
-		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers * </a></li>
-		<li><a class="link" href="http://boards.4chan.org/c/">cute * </a></li>
-		<li><a class="link" href="http://boards.4chan.org/x/">paranormal * </a></li>
+		<li><a class="link" href="http://boards.4chan.org/g/">technology</a> * </li>
+		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan</a> * </li>
+		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
+		<li><a class="link" href="http://boards.4chan.org/c/">cute</a> * </li>
+		<li><a class="link" href="http://boards.4chan.org/x/">paranormal</a></li>
 	</ul>
 	<br>
 	<ul>
 		<li class="cat">&#9002; Programming</li>
-		<li><a class="link" href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer * </a></li>
-		<li><a class="link" href="https://reddit.com/r/learnprogramming">/r/learnprogramming * </a></li>
-		<li><a class="link" href="https://projecteuler.net/">project euler * </a></li>
-		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly * </a></li>
-		<li><a class="link" href="http://www.codeabbey.com">code abbey * </a></li>
+		<li><a class="link" href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
+		<li><a class="link" href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
+		<li><a class="link" href="https://projecteuler.net/">project euler</a> * </li>
+		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a> * </li>
+		<li><a class="link" href="http://www.codeabbey.com">code abbey</a></li>
 	</ul>
 	<ul>
 		<li class="cat">&#9002; Misc</li>
-		<li><a class="link" href="http://drive.google.com/">google drive * </a></li>
-		<li><a class="link" href="https://news.ycombinator.com/">hacker news * </a></li>
-		<li><a class="link" href="http://techcrunch.com/">techchrunch * </a></li>
-		<li><a class="link" href="http://lifehacker.com/">lifehacker * </a></li>
-		<li><a class="link" href="https://www.clickhole.com">clickhole * </a></li>
+		<li><a class="link" href="http://drive.google.com/">google drive</a> * </li>
+		<li><a class="link" href="https://news.ycombinator.com/">hacker news</a> * </li>
+		<li><a class="link" href="http://techcrunch.com/">techchrunch</a> * </li>
+		<li><a class="link" href="http://lifehacker.com/">lifehacker</a> * </li>
+		<li><a class="link" href="https://www.clickhole.com">clickhole</a></li>
 	</ul>
 
 </main>
