messed with home 3 colors, removed some links, and updated corresponding screenshot

--- a/home3.html
+++ b/home3.html
@@ -51,8 +51,7 @@
 		<li><a class="link" href="http://boards.4chan.org/g/">technology</a> * </li>
 		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan</a> * </li>
 		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
-		<li><a class="link" href="http://boards.4chan.org/c/">cute</a> * </li>
-		<li><a class="link" href="http://boards.4chan.org/x/">paranormal</a></li>
+		<li><a class="link" href="http://boards.4chan.org/c/">cute</a></li>
 	</ul>
 	<br>
 	<ul>
@@ -60,8 +59,7 @@
 		<li><a class="link" href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
 		<li><a class="link" href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
 		<li><a class="link" href="https://projecteuler.net/">project euler</a> * </li>
-		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a> * </li>
-		<li><a class="link" href="http://www.codeabbey.com">code abbey</a></li>
+		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a></li>
 	</ul>
 	<ul>
 		<li class="cat">&#9002; Misc</li>
