added /wg/,  gmail, and deviantart links

--- a/home3.html
+++ b/home3.html
@@ -19,7 +19,7 @@
 	  		document.write("<h1>Good afternoon, Jas.</h1>")
 	  	else
 	  		document.write("<h1>Good evening, Jas.</h1>")
-	
+
 	  	document.write("<h2>It is " + hrs + ":" + mins)
 	</script>
 	<!-- specify date -->
@@ -51,7 +51,7 @@
 		<li><a class="link" href="http://boards.4chan.org/g/">technology</a> * </li>
 		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan</a> * </li>
 		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
-		<li><a class="link" href="http://boards.4chan.org/c/">cute</a></li>
+		<li><a class="link" href="http://boards.4chan.org/wg/">wallpapers general</a></li>
 	</ul>
 	<br>
 	<ul>
@@ -61,13 +61,13 @@
 		<li><a class="link" href="https://projecteuler.net/">project euler</a> * </li>
 		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a></li>
 	</ul>
+	<br>
 	<ul>
 		<li class="cat">&#9002; Misc</li>
 		<li><a class="link" href="http://drive.google.com/">google drive</a> * </li>
+		<li><a class="link" href="http://mail.google.com/">gmail</a> * </li>
 		<li><a class="link" href="https://news.ycombinator.com/">hacker news</a> * </li>
-		<li><a class="link" href="http://techcrunch.com/">techchrunch</a> * </li>
-		<li><a class="link" href="http://lifehacker.com/">lifehacker</a> * </li>
-		<li><a class="link" href="https://www.clickhole.com">clickhole</a></li>
+		<li><a class="link" href="http://deviantart.com"</a>deviantart</li>
 	</ul>
 
 </main>
