livng the weeb life. changed greetings to jp, also added fontawesome icons for bullets

--- a/home3.html
+++ b/home3.html
@@ -3,6 +3,8 @@
 <head>
 	<title>home</title>
 	<link rel="stylesheet" href="home3.css">
+	<link rel="stylesheet" href="fa/css/font-awesome.min.css">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 
 <main>
@@ -14,11 +16,11 @@
 	    if(mins < 10)
 	      mins = "0"+mins;
 	  	if(hrs < 13)
-	  		document.write("<h1>Good morning, Jas.</h1>")
+	  		document.write("<h1>おはよう!</h1>")
 	  	else if(hrs > 13 && hrs < 18)
-	  		document.write("<h1>Good afternoon, Jas.</h1>")
+	  		document.write("<h1>こんにちは!</h1>")
 	  	else
-	  		document.write("<h1>Good evening, Jas.</h1>")
+	  		document.write("<h1>こんばんは!</h1>")
 
 	  	document.write("<h2>It is " + hrs + ":" + mins)
 	</script>
@@ -38,7 +40,7 @@
 
 	<!-- links -->
 	<ul>
-		<li class="cat">&#9002; Reddit</li>
+		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-reddit-alien"></i> Reddit</li>
 		<li><a class="link" href="https://www.reddit.com/">reddit</a> * </li>
 		<li><a class="link" href="https://www.reddit.com/r/unixporn">/r/unixporn</a> * </li>
 		<li><a class="link" href="https://www.reddit.com/r/math">/r/math</a> * </li>
@@ -47,7 +49,7 @@
 	</ul>
 	<br>
 	<ul>
-		<li class="cat">&#9002; 4chan</li>
+		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-leaf"></i> 4chan</li>
 		<li><a class="link" href="http://boards.4chan.org/g/">technology</a> * </li>
 		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan</a> * </li>
 		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
@@ -55,7 +57,7 @@
 	</ul>
 	<br>
 	<ul>
-		<li class="cat">&#9002; Programming</li>
+		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-terminal"></i> Programming</li>
 		<li><a class="link" href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
 		<li><a class="link" href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
 		<li><a class="link" href="https://projecteuler.net/">project euler</a> * </li>
@@ -63,7 +65,7 @@
 	</ul>
 	<br>
 	<ul>
-		<li class="cat">&#9002; Misc</li>
+		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-star-o"></i> Misc</li>
 		<li><a class="link" href="http://drive.google.com/">google drive</a> * </li>
 		<li><a class="link" href="http://mail.google.com/">gmail</a> * </li>
 		<li><a class="link" href="https://news.ycombinator.com/">hacker news</a> * </li>
