--- a/home3.html
+++ b/home3.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>home</title>
-	<link rel="stylesheet" href="home3.css">
-	<link rel="stylesheet" href="fa/css/font-awesome.min.css">
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-</head>
+	<head>
+		<title>home</title>
+		<link rel="stylesheet" href="home3.css">
+		<link rel="stylesheet" href="fa/css/font-awesome.min.css">
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
-<main>
-	<!-- specify time -->
-	<script type="text/javascript">
-	    var currentDate = new Date()
-	    var hrs = currentDate.getHours()
-	    var mins = currentDate.getMinutes()
-	    if(mins < 10)
-	      mins = "0"+mins;
-	  	if(hrs < 13)
-	  		document.write("<h1>おはよう!</h1>")
-	  	else if(hrs > 13 && hrs < 18)
-	  		document.write("<h1>こんにちは!</h1>")
-	  	else
-	  		document.write("<h1>こんばんは!</h1>")
+	</head>
+<body>
+	<main>
+	<h1 id="greeting"> </h1>
+	<h2 id="dates"> </h2>
+	<script>
+		var currentDate = new Date();
+		var hrs = currentDate.getHours();
+		var mins = currentDate.getMinutes();
+		// Math.floor((Math.random() * 10) + 1);
+		if(mins < 10)
+			mins = "0"+mins;
+		if(hrs < 13)
+			document.getElementById("greeting").innerHTML = "おはよう!";// + "「 Ohayo gozaimasu 」";
+		else if(hrs > 13 && hrs < 18)
+			document.getElementById("greeting").innerHTML = "こんにちは!";// 「 Konnichiwa  」";
+		else
+			document.getElementById("greeting").innerHTML = "こんばんは!";// 「 Oyasumi 」";
 
-	  	document.write("<h2>It is " + hrs + ":" + mins)
+		var monthNum = currentDate.getMonth();
+		var month = "Month";
+		var monthList = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "December"];
+
+		month = monthList[monthNum];
+		document.getElementById("dates").innerHTML = "It is " + hrs + ":" + mins + " on " + month + " " + currentDate.getDate() + ", " + currentDate.getFullYear() + ".";
 	</script>
-	<!-- specify date -->
-	<script type="text/javascript">
-    	var currentDate2 = new Date()
-    	var date = currentDate2.getDate()
-    	var year = currentDate2.getFullYear()
-    	var monthNum = currentDate2.getMonth() + 1;
-    	var month = "Month";
-    	if(monthNum == 11)
-    	  month = "November";
-    	else
-    	  month = "December";
-  		document.write(" on " + month + " " + date + ", " + year + ".</h2>")
-	</script>
-
 	<!-- links -->
 	<ul>
 		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-reddit-alien"></i> Reddit</li>
@@ -72,8 +66,8 @@
 		<li><a class="link" href="http://deviantart.com"</a>deviantart</li>
 	</ul>
 
-</main>
+	</main>
 
 
-</body>
+	</body>
 </html>
