--- a/home3.html
+++ b/home3.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<title>home</title>
-		<link rel="stylesheet" href="home3.css">
+		<link rel="stylesheet" href="style3.css">
 		<link rel="stylesheet" href="fa/css/font-awesome.min.css">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
 	</head>
 <body>
+
+
 	<main>
 	<h1 id="greeting"> </h1>
 	<h2 id="dates"> </h2>
@@ -33,41 +35,40 @@
 		document.getElementById("dates").innerHTML = "It is " + hrs + ":" + mins + " on " + month + " " + currentDate.getDate() + ", " + currentDate.getFullYear() + ".";
 	</script>
 	<!-- links -->
+
 	<ul>
 		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-reddit-alien"></i> Reddit</li>
-		<li><a class="link" href="https://www.reddit.com/">reddit</a> * </li>
-		<li><a class="link" href="https://www.reddit.com/r/unixporn">/r/unixporn</a> * </li>
-		<li><a class="link" href="https://www.reddit.com/r/math">/r/math</a> * </li>
-		<li><a class="link" href="https://www.reddit.com/r/technology">/r/technology</a> * </li>
-		<li><a class="link" href="https://www.reddit.com/r/space">/r/space</a></li>
+		<li><a href="https://www.reddit.com/">reddit</a> * </li>
+		<li><a href="https://www.reddit.com/r/unixporn">/r/unixporn</a> * </li>
+		<li><a href="https://www.reddit.com/r/math">/r/math</a> * </li>
+		<li><a href="https://www.reddit.com/r/technology">/r/technology</a> * </li>
+		<li><a href="https://www.reddit.com/r/space">/r/space</a></li>
 	</ul>
 	<br>
 	<ul>
-		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-leaf"></i> 4chan</li>
-		<li><a class="link" href="http://boards.4chan.org/g/">technology</a> * </li>
-		<li><a class="link" href="https://www.reddit.com/r/4chan">/r/4chan</a> * </li>
-		<li><a class="link" href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
-		<li><a class="link" href="http://boards.4chan.org/wg/">wallpapers general</a></li>
+		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-leaf"></i> chans</li>
+		<li><a href="http://boards.4chan.org/g/">technology</a> * </li>
+		<li><a href="https://lainchan.org/cyb/index.html">cyb</a> * </li>
+		<li><a href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
+		<li><a href="http://boards.4chan.org/wg/">wallpapers general</a></li>
 	</ul>
 	<br>
 	<ul>
 		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-terminal"></i> Programming</li>
-		<li><a class="link" href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
-		<li><a class="link" href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
-		<li><a class="link" href="https://projecteuler.net/">project euler</a> * </li>
-		<li><a class="link" href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a></li>
+		<li><a href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
+		<li><a href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
+		<li><a href="https://projecteuler.net/">project euler</a> * </li>
+		<li><a href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a></li>
 	</ul>
 	<br>
 	<ul>
 		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-star-o"></i> Misc</li>
-		<li><a class="link" href="http://drive.google.com/">google drive</a> * </li>
-		<li><a class="link" href="http://mail.google.com/">gmail</a> * </li>
-		<li><a class="link" href="https://news.ycombinator.com/">hacker news</a> * </li>
-		<li><a class="link" href="http://deviantart.com"</a>deviantart</li>
+		<li><a href="http://drive.google.com/">google drive</a> * </li>
+		<li><a href="http://mail.google.com/">gmail</a> * </li>
+		<li><a href="https://news.ycombinator.com/">hacker news</a> * </li>
+		<li><a href="http://www.deviantart.com/notifications/"</a>deviantart</li>
 	</ul>
 
 	</main>
-
-
 	</body>
 </html>
