this repo is a mess. added new websites and a new section

--- a/home3.html
+++ b/home3.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>home</title>
 		<link rel="stylesheet" href="style3.css">
-		<link rel="stylesheet" href="fa/css/font-awesome.min.css">
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
 	</head>
@@ -37,36 +36,44 @@
 	<!-- links -->
 
 	<ul>
-		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-reddit-alien"></i> Reddit</li>
+		<li class="cat"> Reddit</li>
 		<li><a href="https://www.reddit.com/">reddit</a> * </li>
 		<li><a href="https://www.reddit.com/r/unixporn">/r/unixporn</a> * </li>
 		<li><a href="https://www.reddit.com/r/math">/r/math</a> * </li>
-		<li><a href="https://www.reddit.com/r/technology">/r/technology</a> * </li>
-		<li><a href="https://www.reddit.com/r/space">/r/space</a></li>
+		<li><a href="https://www.reddit.com/r/Simulated">/r/simulated</a> * </li>
+		<li><a href="https://www.reddit.com/r/4chan">/r/4chan</a></li>
 	</ul>
 	<br>
 	<ul>
-		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-leaf"></i> chans</li>
-		<li><a href="http://boards.4chan.org/g/">technology</a> * </li>
-		<li><a href="https://lainchan.org/cyb/index.html">cyb</a> * </li>
-		<li><a href="http://boards.4chan.org/w/">anime/wallpapers</a> * </li>
-		<li><a href="http://boards.4chan.org/wg/">wallpapers general</a></li>
+		<li class="cat"> Chans</li>
+		<li><a href="http://boards.4chan.org/g/" title="4chan - technology">/g/</a> * </li>
+		<li><a href="https://lainchan.org/tech/catalog.html" title="lainchan - technology">/tech/</a> * </li>
+		<li><a href="https://lainchan.org/cyb/index.html" title="lainchan - cyberpunk*">/cyb/</a> * </li>
+		<li><a href="https://lainchan.org/r/catalog.html" title="lainchan - random">/r/</a> * </li>
+		<li><a href="http://boards.4chan.org/w/" title="4chan - anime wallpapers">/w/</a> * </li>
+		<li><a href="http://boards.4chan.org/wg/" title="wallpapers general">/wg/</a></li>
 	</ul>
 	<br>
 	<ul>
-		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-terminal"></i> Programming</li>
-		<li><a href="https://www.reddit.com/r/dailyprogrammer">/r/dailyprogrammer</a> * </li>
-		<li><a href="https://github.com/jastronaut?tab=repositories">github</a> * </li>
+		<li class="cat"> Programming</li>
+		<li><a href="https://github.com">github</a> * </li>
 		<li><a href="https://projecteuler.net/">project euler</a> * </li>
-		<li><a href="https://en.wikibooks.org/wiki/X86_Assembly">x86 assembly</a></li>
+		<li><a href="https://developer.mozilla.org/en-US/docs/Web">mdn</a> * </li>
 	</ul>
 	<br>
 	<ul>
-		<li class="cat"><i style="color:#8FA1B3;line-height:0px"class="fa fa-star-o"></i> Misc</li>
-		<li><a href="http://drive.google.com/">google drive</a> * </li>
+		<li class="cat"> Communication</li>
 		<li><a href="http://mail.google.com/">gmail</a> * </li>
+		<li><a href="https://www.messenger.com">messenger</a> * </li>
+		<li><a href="https://www.tumblr.com/dashboard">tumblr</a></li>
+	</ul>
+	<br>
+	<ul>
+		<li class="cat"> Misc</li>
+		<li><a href="http://drive.google.com/">google drive</a> * </li>
 		<li><a href="https://news.ycombinator.com/">hacker news</a> * </li>
-		<li><a href="http://www.deviantart.com/notifications/"</a>deviantart</li>
+		<li><a href="http://www.deviantart.com/notifications/">deviantart</a> * </li>
+		<li><a href="https://www.youtube.com/feed/subscriptions">youtube</a></li>
 	</ul>
 
 	</main>
